# qt-service-lab

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: linux.yml
app/: AppController.h  AppState.h
models/: FeedModel.cpp  FeedModel.h
qml/: Main.qml
qml/components/: AppButton.qml  ErrorBanner.qml  LoadingOverlay.qml
qml/screens/: FeedScreen.qml
services/: FakeApiService.cpp  FakeApiService.h
src/: main.cpp
src/app/: AppController.cpp  AppController.h  AppState.cpp
src/models/: FeedItem.h
src/services/: FakeApiService.h
utils/: RandomDelay.cpp  RandomDelay.h
